--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ target/
 
 local_settings.py
 .idea/
+/demo_data.json
 /students/static/js/jquery.min.js
 /students/static/js/bootstrap.min.js
 /students/static/css/bootstrap.min.css
