--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ target/
 local_settings.py
 .idea/
 /demo_data.json
+/pg_data.json
 /students/static/js/jquery.min.js
 /students/static/js/bootstrap.min.js
 /students/static/css/bootstrap.min.css
