--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-MySQL-python==1.2.5
 Django==1.7.11
+MySQL-python==1.2.5
 Pillow==3.1.1
 argparse==1.2.1
+django-crispy-forms==1.4.0
+psycopg2==2.6.1
 wsgiref==0.1.2
