--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ target/
 /students/static/js/bootstrap.min.js
 /students/static/js/jquery.cookie.js
 /students/static/js/moment.min.js
+/students/static/js/uk.js
 /students/static/css/bootstrap.min.css
 local_settings.py
 .idea/
