--- a/.gitignore
+++ b/.gitignore
@@ -58,13 +58,17 @@ docs/_build/
 
 # PyBuilder
 target/
+
+/students/static/js/jquery.form.min.js
+/students/static/css/bootstrap-datetimepicker.min.css
 /students/static/js/bootstrap-datetimepicker.min.js
 /students/static/js/jquery.min.js
+/students/static/css/bootstrap.min.css
 /students/static/js/bootstrap.min.js
 /students/static/js/jquery.cookie.js
 /students/static/js/moment.min.js
 /students/static/js/uk.js
-/students/static/css/bootstrap.min.css
+
 local_settings.py
 .idea/
 /demo_data.json
