--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,7 @@ target/
 /students/static/js/jquery.min.js
 /students/static/css/bootstrap.min.css
 /students/static/js/bootstrap.min.js
-/students/static/js/jquery.cookie.js
+/students/static/js/jquery.cookie.min.js
 /students/static/js/moment.min.js
 /students/static/js/uk.js
 
