--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-bs4
 Django==1.7.11
 MySQL-python==1.2.5
 Pillow==3.1.1
 PyJWT==1.4.0
 argparse==1.2.1
 beautifulsoup4==4.5.0
+coverage==3.7.1
+django-coverage==1.2.4
 django-crispy-forms==1.4.0
 django-registration-redux==1.4
 lxml==3.6.0
