Add captcha to send letter form

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,18 @@ Pillow==3.1.1
 PyJWT==1.4.0
 argparse==1.2.1
 beautifulsoup4==4.5.0
+captcha==0.2.1
 coverage==3.7.1
 django-coverage==1.2.4
 django-crispy-forms==1.4.0
 django-registration-redux==1.4
+django-simple-captcha==0.5.2
 lxml==3.6.0
 oauthlib==1.1.2
-psycopg2==2.6.1
 python-dateutil==2.5.2
 python-openid==2.2.5
 python-social-auth==0.2.19
+pytz==2016.6.1
 requests==2.10.0
 requests-oauthlib==0.6.1
 six==1.10.0
